@@ -1,5 +1,6 @@
 Verion 0.9.44dev (?? ??? 2004)
   - Fixed bug 862177: invalid '?' in URL
+  - Fixed bug: custom script/stylesheet was not being included on login page
 Verion 0.9.43 (10 Mar 2004)
   - Added iCal import
   - Fixed non-translated text in purge.php
